# cloud-mutex

./: .gitignore  Makefile  Makefile.am  README.md  cloud-mutex.suppressions  configure.ac
client/include/: clientsocket.h
client/src/: Makefile  Makefile.am  clientlog.properties  clientsocket.cpp  cmclient.cpp  cmclient_test.cpp
common/src/: Makefile  socketinfo.cpp
include/client/: clientsocket.h  cmclient.h
include/common/: msgtypes.h  socketinfo.h  timeoutexception.h
include/server/: clienthandler.h  serversocket.h
server/include/: clienthandler.h  serversocket.h
server/src/: Makefile  Makefile.am  clienthandler.cpp  cmserver.cpp  serverlog.properties  serversocket.cpp
src/client/: Makefile  clientlog.properties  clientsocket.cpp  cmclient.cpp
src/common/: socketinfo.cpp
src/server/: Makefile  clienthandler.cpp  cmserver.cpp  serverlog.properties  serversocket.cpp
test/integration/: .gitignore  Makefile.am  cmclient.cpp
test/unittest/: .gitignore  Makefile.am  serversocket_test.cpp  socketinfo_test.cpp  syswrap.cpp  syswrap.h
